Removed java modules Reconfigured logger Changed distribution rules